--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Car Wash Management System Design System */
+/* PetaLog Design System */
 
 @layer base {
   :root {
